deploy-main.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: style-bootstrap-server
  labels:
    app: style-bootstrap

spec:
  #replicas: 2
  selector:
    matchLabels:
      app: style-bootstrap
  template:
    metadata:
      labels:
        app: style-bootstrap
    spec:
      containers:
        - name: server
          image: ghcr.io/starfall-mc/bootstrap-style:main
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
